cluster/apps/networking/traefik/passthrough/pg-passthrough.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pg
  namespace: networking
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 12080
---
apiVersion: v1
kind: Endpoints
metadata:
  name: pg
  namespace: networking
subsets:
- addresses:
  - ip: ${NAS_ADDRESS}
  ports:
  - port: 12080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.tls: "true"  
    traefik.ingress.kubernetes.io/router.middlewares: "networking-rfc1918@kubernetescrd"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    hajimari.io/enable: "false"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - "pg.${DOMAIN_2}"
      secretName: "pg-${DOMAIN_2/./-}-tls"
  rules:
    - host: pg.${DOMAIN_2}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pg
                port:
                  number: 80
